workspace/dpdk-sys/src/bindgen/c/rte_mempool.static-inline.h

void rust___mempool_generic_put(struct rte_mempool * mp, void * const * obj_table, unsigned int n, struct rte_mempool_cache * cache);
struct rte_mempool_objtlr * rust___mempool_get_trailer(void * obj);
struct rte_mempool_objhdr * rust___mempool_get_header(void * obj);
int rust___mempool_generic_get(struct rte_mempool * mp, void * * obj_table, unsigned int n, struct rte_mempool_cache * cache);