workspace/dpdk-sys/src/bindgen/c/tle_dring.static-inline.h

void rust___tle_dring_copy_objs(const void * dst[], const void * const src[], uint32_t num);
uint32_t rust___tle_dring_enqueue(struct tle_dring * dr, uint32_t head, const void * const objs[], uint32_t nb_obj, struct tle_drb * drbs[], uint32_t nb_drb);
uint32_t rust___tle_dring_dequeue(struct tle_dring * dr, uint32_t head, const void * objs[], uint32_t nb_obj, struct tle_drb * drbs[], uint32_t nb_drb);