workspace/dpdk-sys/src/bindgen/c/rte_ip.static-inline.h

uint32_t rust___rte_raw_cksum(const void * buf, size_t len, uint32_t sum);
uint16_t rust___rte_raw_cksum_reduce(uint32_t sum);